<resources>
    <string name="app_name">BÄRENÖL</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="remmber_me">Remmber me ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="logooo">Logooo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_num">Phone Num</string>
    <string name="address">Address</string>
    <string name="signup">SignUp</string>
    <string name="have_account">have account?</string>
    <string name="profileic">profileIc</string>
    <string name="profile_name">Profile Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="points">Points</string>
    <string name="likes">Likes</string>
    <string name="notification_frag">NOTIFICATION FRAG</string>
    <string name="home_frag">HOME FRAG</string>
    <string name="cart_frag">CART FRAG</string>
    <string name="order_id">order id</string>
    <string name="order_details">order details</string>
    <string name="done">done</string>
    <string name="placeholder">placeholder</string>
    <string name="product_name">Product Name</string>
    <string name="rate_know">Rate Know</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="hello">hello</string>
</resources>