<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/loback"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="96dp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/logol"
        android:contentDescription="@string/logooo" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/green"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/darkWhite"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_input"
            android:hint="@string/user_name"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#70FFFFFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"

                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:orientation="horizontal"

        >

        <CheckBox
            android:id="@+id/chBox_RememberMe"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remmber_me"
            android:textColor="#E1FFFFFF"
            android:textSize="13sp"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login"
        android:onClick="btnLogin_onClick"
        android:text="@string/login"

        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <TextView
            android:id="@+id/labelSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="signup_onClick"
            android:text="@string/sign_up"
            android:textColor="#86AE18" />
    </LinearLayout>

</LinearLayout>