<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/signup"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="96dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logol"
        android:contentDescription="@string/logooo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="ExtraText">
        /* First Name */
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="10dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="#70FFFFFF"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        /* Last Name */
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardCornerRadius="20dp"
            android:layout_marginStart="10dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="#70FFFFFF"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input"
                    android:hint="@string/last_name"
                    android:textColor="@color/white"

                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#70FFFFFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_phone"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#70FFFFFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_pass"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#70FFFFFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00FFFFFF"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_addr"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="#70FFFFFF"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_input"
                android:hint="@string/address"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login"
        android:onClick="btnSignUp_onClick"
        android:text="@string/signup"

        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"

        >

        <TextView
            android:id="@+id/labelSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login"
            android:textColor="#18AE6D"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>