<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/color_liner"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:background="@drawable/profile_back_img"
        android:orientation="vertical"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="95dp"
                android:layout_height="95dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center"
                >

                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:src="@drawable/avatar"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/profileic" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textSize="23sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/pointsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:id="@+id/profile_edit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/profile_list_setting"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:clickable="true"
            >


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/edit_profile"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/points_click"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/profile_list_setting"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"

                app:srcCompat="@drawable/point" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/points"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/likes"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:background="@drawable/profile_list_setting"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/fav" />

            <TextView
                android:id="@+id/likesText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:gravity="center_vertical"
                android:text="@string/likes"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>